Give LAMurakami GitHub Pages Blog top billing

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,19 @@
 <title>LAM Sites in the cloud and at home in Alaska.</title>
 
-<center><h1>LAM Sites in the cloud and at home in Alaska.</h1></center>
+<center>
+<h1>LAM Sites in the cloud and at home in Alaska.</h1>
 
-These sites use Dynamic Domain Name Services to allow servers that get a dynamically assigned IP Address to "check in" as the server for sets of virtual hosts.
+<h2><a href="https://blog.lamurakami.com">
+LAMurakami GitHub Pages Blog</a></h2>
+</center>
 
-<h2>DDNS <a href="#lamurakami">lamurakami</a> <a href="#lam1">lam1</a> <a href="#lam2">lam2</a> <a href="#lam1ak">lam1ak</a> <a href="#larryforalaska">larryforalaska</a> and more</h2>
+<h2>DDNS <a href="#lamurakami">lamurakami</a> <a href="#lam1">lam1</a>
+<a href="#lam2">lam2</a> <a href="#lam1ak">lam1ak</a>
+<a href="#larryforalaska">larryforalaska</a> and more</h2>
+
+These sites use Dynamic Domain Name Services to allow servers that get
+a dynamically assigned IP Address to "check in" as the server for sets
+of virtual hosts.
 
 <h2><span id="lamurakami">
 <a href="http://lamurakami.duckdns.org">lamurakami.duckdns.org</a></span>
