ak20 - Newest Server on Local Area Network

--- a/html/index.html
+++ b/html/index.html
@@ -118,6 +118,11 @@ CNAME target of
 </h2>
 
     <ul>
+
+    <li><a href="https://ak20.lam1.us/?lam">
+                                            * https://ak20.lam1.us</a>
+ - Newest Server on Local Area Network</li>
+
     <li><a href="http://gci.lam1.us/?lam"> * http://gci.lam1.us  </a>
  - My site by IP Address</li>
     <li><a href="http://ak17.lam1.us/?lam"> * http://ak17.lam1.us  </a>
@@ -128,13 +133,6 @@ CNAME target of
  - Laptop computer on Local Area Network</li>
     <li><a href="https://ak7.LAM1.us/">      * https://ak7.LAM1.us  </a>
  - Old server</li>
-
-    <li><a href="https://ak16.lam1.us/?lam">
-                                            * https://ak16.lam1.us</a>
- - Old Laptop computer on Local Area Network</li>
-    <li><a href="https://ak6.LAM1.us/">      * https://ak6.LAM1.us  </a>
- - Really Old server</li>
-
     </ul>
 
 <h2><span id="larryforalaska">
