--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,7 @@ CNAME target of
     <ul>
     <li><a href="https://blog.lamurakami.com">             * https://blog.lamurakami.com  </a>
 - My LAMurakami GitHub Pages Blog - published from gh-pages branch</li>
-    <li><a href="https://github.lamurakami.com">             * https://github.lamurakami.com  </a>
+    <li><a href="https://lamurakami.github.io">             * https://lamurakami.github.io  </a>
 - My GitHub Pages website - published from master branch</li>
     <li><a href="https://datasciencecoursera.lamurakami.com"> * https://datasciencecoursera.lamurakami.com  </a>
 - published from /docs directory of master branch</li>
