https://lamurakami.github.io/datasharing

--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,7 @@ CNAME target of
 - My GitHub Pages website - published from master branch</li>
     <li><a href="https://datasciencecoursera.lamurakami.com"> * https://datasciencecoursera.lamurakami.com  </a>
 - published from /docs directory of master branch</li>
-    <li><a href="https://datasharing.lamurakami.com"> * https://datasharing.lamurakami.com  </a>
+    <li><a href="https://lamurakami.github.io/datasharing"> * https://lamurakami.github.io/datasharing  </a>
 - published from gh-pages branch using Jekyll Cayman theme</li>
 </ul>
 
