--- a/html/index.html
+++ b/html/index.html
@@ -102,11 +102,11 @@ CNAME target of
 
 <h2>Some static GitHub Pages websites</h2>
     <ul>
-    <li><a href="https://blog.lamurakami.com">             * https://blog.lamurakami.com  </a>
+    <li><a href="https://lamurakami.github.io/blog">        * https://lamurakami.github.io/blog  </a>
 - My LAMurakami GitHub Pages Blog - published from gh-pages branch</li>
     <li><a href="https://lamurakami.github.io">             * https://lamurakami.github.io  </a>
 - My GitHub Pages website - published from master branch</li>
-    <li><a href="https://datasciencecoursera.lamurakami.com"> * https://datasciencecoursera.lamurakami.com  </a>
+    <li><a href="https://lamurakami.github.io/datasciencecoursera"> * https://lamurakami.github.io/datasciencecoursera  </a>
 - published from /docs directory of master branch</li>
     <li><a href="https://lamurakami.github.io/datasharing"> * https://lamurakami.github.io/datasharing  </a>
 - published from gh-pages branch using Jekyll Cayman theme</li>
