Fix blog URL: https://lamurakami.github.io/blog

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <center>
 <h1>LAM Sites in the cloud and at home in Alaska.</h1>
 
-<h2><a href="https://blog.lamurakami.com">
+<h2><a href="https://lamurakami.github.io/blog">
 LAMurakami GitHub Pages Blog</a></h2>
 </center>
 
