--- a/html/menuBar.html
+++ b/html/menuBar.html
@@ -1,4 +1,3 @@
-<!-- $Id: menuBar.html,v 1.6 2018/04/10 19:44:01 ubuntu Exp ubuntu $ -->
 <div id="top_nav"><div id="menuwrapper">
 <ul id="menuBar" style="margin-bottom: 0px;">
 <li><a class="trigger" href="/" name="top">
@@ -26,8 +25,8 @@
 <li><a class="trigger" href="#tail">        Contact me</a>
     <ul>
     <li><a href="/?dir">                    * 907-978-0260</a></li>
-    <li><a href="MailTo:sites.ServerAdmin@lam1.us">
-                                            * sites.ServerAdmin@lam1.us</a></li>
+    <li><a href="MailTo:sites.ServerAdmin@LAMurakami.com">
+                                            * sites.ServerAdmin@LAMurakami.com</a></li>
     </ul>
 </li><!-- END Contact me -->
 </ul>
