ak20 is Default Secure and UnSecure site

--- a/html/index.html
+++ b/html/index.html
@@ -118,21 +118,19 @@ CNAME target of
 </h2>
 
     <ul>
-
     <li><a href="https://ak20.lam1.us/?lam">
                                             * https://ak20.lam1.us</a>
- - Newest Server on Local Area Network</li>
-
+ - Newest Server on Local Area Network - Default Secure site</li>
+    <li><a href="http://ak20.lam1.us/?lam"> * http://ak20.lam1.us  </a>
+ - Default UnSecure site</li>
     <li><a href="http://gci.lam1.us/?lam"> * http://gci.lam1.us  </a>
  - My site by IP Address</li>
-    <li><a href="http://ak17.lam1.us/?lam"> * http://ak17.lam1.us  </a>
- - Default UnSecure site</li>
     <li><a href="https://ak17.lam1.us/?lam"> * https://ak17.lam1.us  </a>
- - Default Secure site</li>
+ - Old Secure site</li>
     <li><a href="https://ak19.lam1.us/?lam"> * https://ak19.lam1.us  </a>
  - Laptop computer on Local Area Network</li>
     <li><a href="https://ak7.LAM1.us/">      * https://ak7.LAM1.us  </a>
- - Old server</li>
+ - Really Old server</li>
     </ul>
 
 <h2><span id="larryforalaska">
