Add lam3.lam1.us - CNAME to duckdns.org subdomain

--- a/html/index.html
+++ b/html/index.html
@@ -113,7 +113,7 @@ CNAME target of
 </ul>
 
 <h2><span id="lam1ak">
-<a href="http://lam1ak.asuscomm.com">lam1ak.asuscomm.com</a></span>
+<a href="http://lam1ak.duckdns.org">lam1ak.duckdns.org</a></span>
  - Linux Apache MariaDB at home in Alaska.
 </h2>
 
@@ -138,6 +138,8 @@ CNAME target of
  - CNAME target of LarryForAlaska
 </h2>
     <ul>
+    <li><a href="http://lam3.LAM1.us/">        * http://lam3.LAM1.us  </a>
+ - Linux Apache MariaDB in the cloud.
 <li><a href="http://www.interiordems.org"> * http://www.interiordems.org  </a> - Interior Democrats
 <br>
     <li><a href="http://LarryForAlaska.com">
