Add sites and blinkenshell to all AWS DDNS groups

--- a/html/index.html
+++ b/html/index.html
@@ -21,10 +21,13 @@ of virtual hosts.
 </h2>
 
     <ul>
+    <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
     <li><a href="http://aws.LAM1.us/">        * http://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://www.LAM1.us/">        * http://www.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.</li>
+    <li><a href="http://blinkenshell.lamurakami.com/">        * http://blinkenshell.lamurakami.com  </a>
+ - Clone of http://lam.blinkenshell.org</li>
 <br>
 <li>
 <a href="http://mike.lam1.us/About">        * http://mike.lam1.us  </a>
@@ -52,6 +55,8 @@ of virtual hosts.
  - Olnes West Subdivision, Alaska</li>
     <li><a href="http://arsc.LAM1.us/">    * http://arsc.LAM1.us  </a>
  - Arctic Region Supercomputing Center people page</li>
+    <li><a href="http://blinkenshell.lam1.us/">        * http://blinkenshell.lam1.us  </a>
+ - Clone of http://lam.blinkenshell.org</li>
 <br>
     <li><a href="http://LAMurakami.com/?lam">
                                             * http://LAMurakami.com  </a>
@@ -66,8 +71,11 @@ This instance is the main testing instance.  Upgrades and changes to the aws ser
  - SSH SOCKS5 Proxy in the cloud.
 </h2>
 <ul>
+    <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
     <li><a href="http://lam2.LAM1.us/">        * http://lam2.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
+    <li><a href="http://blinkenshell.larrymurakami.com/">        * http://blinkenshell.larrymurakami.com  </a>
+ - Clone of http://lam.blinkenshell.org</li>
 </ul>
 
 <a name="AWS_S3">
@@ -138,8 +146,11 @@ CNAME target of
  - CNAME target of LarryForAlaska
 </h2>
     <ul>
+    <li><a href="http://sites.larryforalaska.com/">    * http://sites.larryforalaska.com  </a></li>
     <li><a href="http://lam3.LAM1.us/">        * http://lam3.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
+    <li><a href="http://blinkenshell.larryforalaska.com/">        * http://blinkenshell.larryforalaska.com  </a>
+ - Clone of http://lam.blinkenshell.org</li>
     <li><a href="http://LarryForAlaska.com">
                                             * http://LarryForAlaska.com</a>
  - 2014 candidate for Alaska State House
