Fix sites.lamurakami.com link

--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@ of virtual hosts.
 </h2>
 
     <ul>
-    <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
+    <li><a href="http://sites.lamurakami.com/">    * http://sites.lamurakami.com  </a></li>
     <li><a href="http://aws.LAM1.us/">        * http://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://www.LAM1.us/">        * http://www.LAM1.us  </a>
