Add z.larrymurakami.com z.larryforalaska.com

--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,7 @@ of virtual hosts.
 
     <ul>
     <li><a href="http://sites.lamurakami.com/">    * http://sites.lamurakami.com  </a></li>
+    <li><a href="http://z.lamurakami.com/">    * http://z.lamurakami.com  </a></li>
     <li><a href="http://aws.LAM1.us/">        * http://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://www.LAM1.us/">        * http://www.LAM1.us  </a>
@@ -72,6 +73,7 @@ This instance is the main testing instance.  Upgrades and changes to the aws ser
 </h2>
 <ul>
     <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
+    <li><a href="http://z.larrymurakami.com/">    * http://z.larrymurakami.com  </a></li>
     <li><a href="http://lam2.LAM1.us/">        * http://lam2.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://blinkenshell.larrymurakami.com/">        * http://blinkenshell.larrymurakami.com  </a>
@@ -147,6 +149,7 @@ CNAME target of
 </h2>
     <ul>
     <li><a href="http://sites.larryforalaska.com/">    * http://sites.larryforalaska.com  </a></li>
+    <li><a href="http://z.larryforalaska.com/">    * http://z.larryforalaska.com  </a></li>
     <li><a href="http://lam3.LAM1.us/">        * http://lam3.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://blinkenshell.larryforalaska.com/">        * http://blinkenshell.larryforalaska.com  </a>
