Link to secure version of more sites
Support sites.lam1.us over ssl using name-based virtual hosting.

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@ a dynamically assigned IP Address to "check in" as the server for sets
 of virtual hosts.
 
 <h2><span id="lamurakami">
-<a href="http://lamurakami.duckdns.org">lamurakami.duckdns.org</a></span>
+<a href="https://lamurakami.duckdns.org">lamurakami.duckdns.org</a></span>
  - Linux Apache MariaDB in the cloud.
 </h2>
 
@@ -40,21 +40,21 @@ of virtual hosts.
 </ul>
 
 <h2><span id="lam1">
-<a href="http://lam1.duckdns.org">lam1.duckdns.org</a></span>
+<a href="https://lam1.duckdns.org">lam1.duckdns.org</a></span>
  - Linux Apache MariaDB in the cloud.
 </h2>
 <ul>
-    <li><a href="http://sites.LAM1.us/">    * http://sites.LAM1.us  </a>
+    <li><a href="https://sites.LAM1.us/">    * https://sites.LAM1.us  </a>
  - This site which may link to my others</li>
     <li><a href="http://lam1.LAM1.us/">     * http://lam1.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
-    <li><a href="http://z.LAM1.us/">        * http://z.LAM1.us  </a>
+    <li><a href="https://z.LAM1.us/">        * https://z.LAM1.us  </a>
  - A place to publish simple pages</li>
-    <li><a href="http://cabo.LAM1.us/">     * http://cabo.LAM1.us  </a>
+    <li><a href="https://cabo.LAM1.us/">     * https://cabo.LAM1.us  </a>
  - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="http://olnes.LAM1.us/">    * http://olnes.LAM1.us  </a>
  - Olnes West Subdivision, Alaska</li>
-    <li><a href="http://arsc.LAM1.us/">    * http://arsc.LAM1.us  </a>
+    <li><a href="https://arsc.LAM1.us/">    * https://arsc.LAM1.us  </a>
  - Arctic Region Supercomputing Center people page</li>
     <li><a href="http://blinkenshell.lam1.us/">        * http://blinkenshell.lam1.us  </a>
  - Clone of http://lam.blinkenshell.org</li>
@@ -68,13 +68,13 @@ of virtual hosts.
 </ul>
 This instance is the main testing instance.  Upgrades and changes to the aws server are tested before being applied to the main server instance.
 <h2><span id="lam2">
-<a href="http://lam2.duckdns.org">lam2.duckdns.org</a></span>
+<a href="https://lam2.duckdns.org">lam2.duckdns.org</a></span>
  - SSH SOCKS5 Proxy in the cloud.
 </h2>
 <ul>
     <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
     <li><a href="http://z.larrymurakami.com/">    * http://z.larrymurakami.com  </a></li>
-    <li><a href="http://lam2.LAM1.us/">        * http://lam2.LAM1.us  </a>
+    <li><a href="https://lam2.LAM1.us/">        * https://lam2.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://blinkenshell.larrymurakami.com/">        * http://blinkenshell.larrymurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
@@ -144,13 +144,13 @@ CNAME target of
     </ul>
 
 <h2><span id="larryforalaska">
-<a href="http://larryforalaska.duckdns.org">larryforalaska.duckdns.org</a></span>
+<a href="https://larryforalaska.duckdns.org">larryforalaska.duckdns.org</a></span>
  - CNAME target of LarryForAlaska
 </h2>
     <ul>
     <li><a href="http://sites.larryforalaska.com/">    * http://sites.larryforalaska.com  </a></li>
     <li><a href="http://z.larryforalaska.com/">    * http://z.larryforalaska.com  </a></li>
-    <li><a href="http://lam3.LAM1.us/">        * http://lam3.LAM1.us  </a>
+    <li><a href="https://lam3.LAM1.us/">        * https://lam3.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://blinkenshell.larryforalaska.com/">        * http://blinkenshell.larryforalaska.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
