Link to secure sites in a lot more cases
Use more descriptive site configuration file names.

--- a/html/index.html
+++ b/html/index.html
@@ -21,9 +21,9 @@ of virtual hosts.
 </h2>
 
     <ul>
-    <li><a href="http://sites.lamurakami.com/">    * http://sites.lamurakami.com  </a></li>
+    <li><a href="https://sites.lamurakami.com/">    * https://sites.lamurakami.com  </a></li>
     <li><a href="http://z.lamurakami.com/">    * http://z.lamurakami.com  </a></li>
-    <li><a href="http://aws.LAM1.us/">        * http://aws.LAM1.us  </a>
+    <li><a href="https://aws.LAM1.us/?lam">        * https://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://www.LAM1.us/">        * http://www.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.</li>
@@ -46,7 +46,7 @@ of virtual hosts.
 <ul>
     <li><a href="https://sites.LAM1.us/">    * https://sites.LAM1.us  </a>
  - This site which may link to my others</li>
-    <li><a href="http://lam1.LAM1.us/">     * http://lam1.LAM1.us  </a>
+    <li><a href="https://lam1.LAM1.us/?lam">     * https://lam1.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="https://z.LAM1.us/">        * https://z.LAM1.us  </a>
  - A place to publish simple pages</li>
@@ -74,7 +74,7 @@ This instance is the main testing instance.  Upgrades and changes to the aws ser
 <ul>
     <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
     <li><a href="http://z.larrymurakami.com/">    * http://z.larrymurakami.com  </a></li>
-    <li><a href="https://lam2.LAM1.us/">        * https://lam2.LAM1.us  </a>
+    <li><a href="https://lam2.LAM1.us/?lam">        * https://lam2.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://blinkenshell.larrymurakami.com/">        * http://blinkenshell.larrymurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
@@ -123,7 +123,7 @@ CNAME target of
 </ul>
 
 <h2><span id="lam1ak">
-<a href="http://lam1ak.duckdns.org">lam1ak.duckdns.org</a></span>
+<a href="https://lam1ak.duckdns.org">lam1ak.duckdns.org</a></span>
  - Linux Apache MariaDB at home in Alaska.
 </h2>
 
@@ -150,7 +150,7 @@ CNAME target of
     <ul>
     <li><a href="http://sites.larryforalaska.com/">    * http://sites.larryforalaska.com  </a></li>
     <li><a href="http://z.larryforalaska.com/">    * http://z.larryforalaska.com  </a></li>
-    <li><a href="https://lam3.LAM1.us/">        * https://lam3.LAM1.us  </a>
+    <li><a href="https://lam3.LAM1.us/?lam">        * https://lam3.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://blinkenshell.larryforalaska.com/">        * http://blinkenshell.larryforalaska.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
