Link to more secure sites

--- a/html/index.html
+++ b/html/index.html
@@ -22,11 +22,17 @@ of virtual hosts.
 
     <ul>
     <li><a href="https://sites.lamurakami.com/">    * https://sites.lamurakami.com  </a></li>
-    <li><a href="http://z.lamurakami.com/">    * http://z.lamurakami.com  </a></li>
+    <li><a href="https://z.lamurakami.com/">    * https://z.lamurakami.com  </a></li>
+    <li><a href="https://cabo.lamurakami.com/">     * https://cabo.lamurakami.com  </a>
+ - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://aws.LAM1.us/?lam">        * https://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="http://www.LAM1.us/">        * http://www.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.</li>
+    <li><a href="https://olnes.lamurakami.com/">    * https://olnes.lamurakami.com  </a>
+ - Olnes West Subdivision, Alaska</li>
+    <li><a href="https://arsc.lamurakami.com/">    * https://arsc.lamurakami.com  </a>
+ - Arctic Region Supercomputing Center people page</li>
     <li><a href="http://blinkenshell.lamurakami.com/">        * http://blinkenshell.lamurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
 <br>
@@ -52,7 +58,7 @@ of virtual hosts.
  - A place to publish simple pages</li>
     <li><a href="https://cabo.LAM1.us/">     * https://cabo.LAM1.us  </a>
  - Cabo San Lucas, Baja California Sur, Mexico.</li>
-    <li><a href="http://olnes.LAM1.us/">    * http://olnes.LAM1.us  </a>
+    <li><a href="https://olnes.LAM1.us/">    * https://olnes.LAM1.us  </a>
  - Olnes West Subdivision, Alaska</li>
     <li><a href="https://arsc.LAM1.us/">    * https://arsc.LAM1.us  </a>
  - Arctic Region Supercomputing Center people page</li>
