Use more secure links

--- a/html/index.html
+++ b/html/index.html
@@ -27,13 +27,13 @@ of virtual hosts.
  - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://aws.LAM1.us/?lam">        * https://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
-    <li><a href="http://www.LAM1.us/">        * http://www.LAM1.us  </a>
+    <li><a href="https://www.LAM1.us/">        * https://www.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.</li>
     <li><a href="https://olnes.lamurakami.com/">    * https://olnes.lamurakami.com  </a>
  - Olnes West Subdivision, Alaska</li>
     <li><a href="https://arsc.lamurakami.com/">    * https://arsc.lamurakami.com  </a>
  - Arctic Region Supercomputing Center people page</li>
-    <li><a href="http://blinkenshell.lamurakami.com/">        * http://blinkenshell.lamurakami.com  </a>
+    <li><a href="https://blinkenshell.lamurakami.com/">        * https://blinkenshell.lamurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
 <br>
 <li>
@@ -62,14 +62,14 @@ of virtual hosts.
  - Olnes West Subdivision, Alaska</li>
     <li><a href="https://arsc.LAM1.us/">    * https://arsc.LAM1.us  </a>
  - Arctic Region Supercomputing Center people page</li>
-    <li><a href="http://blinkenshell.lam1.us/">        * http://blinkenshell.lam1.us  </a>
+    <li><a href="https://blinkenshell.lam1.us/">        * https://blinkenshell.lam1.us  </a>
  - Clone of http://lam.blinkenshell.org</li>
 <br>
-    <li><a href="http://LAMurakami.com/?lam">
-                                            * http://LAMurakami.com  </a>
+    <li><a href="https://LAMurakami.com/?lam">
+                                            * https://LAMurakami.com  </a>
  - Second Domain name</li>
-    <li><a href="http://LarryMurakami.com">
-                                            * http://LarryMurakami.com</a>
+    <li><a href="https://LarryMurakami.com">
+                                            * https://LarryMurakami.com</a>
  - 2014 another domain name</li>
 </ul>
 This instance is the main testing instance.  Upgrades and changes to the aws server are tested before being applied to the main server instance.
@@ -78,11 +78,11 @@ This instance is the main testing instance.  Upgrades and changes to the aws ser
  - SSH SOCKS5 Proxy in the cloud.
 </h2>
 <ul>
-    <li><a href="http://sites.larrymurakami.com/">    * http://sites.larrymurakami.com  </a></li>
-    <li><a href="http://z.larrymurakami.com/">    * http://z.larrymurakami.com  </a></li>
+    <li><a href="https://sites.larrymurakami.com/">    * https://sites.larrymurakami.com  </a></li>
+    <li><a href="https://z.larrymurakami.com/">    * https://z.larrymurakami.com  </a></li>
     <li><a href="https://lam2.LAM1.us/?lam">        * https://lam2.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
-    <li><a href="http://blinkenshell.larrymurakami.com/">        * http://blinkenshell.larrymurakami.com  </a>
+    <li><a href="https://blinkenshell.larrymurakami.com/">        * https://blinkenshell.larrymurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
 </ul>
 
@@ -139,7 +139,7 @@ CNAME target of
  - Newest Server on Local Area Network - Default Secure site</li>
     <li><a href="http://ak20.lam1.us/?lam"> * http://ak20.lam1.us  </a>
  - Default UnSecure site</li>
-    <li><a href="http://gci.lam1.us/?lam"> * http://gci.lam1.us  </a>
+    <li><a href="https://gci.lam1.us/?lam"> * https://gci.lam1.us  </a>
  - My site by IP Address</li>
     <li><a href="https://ak17.lam1.us/?lam"> * https://ak17.lam1.us  </a>
  - Old Secure site</li>
@@ -154,14 +154,14 @@ CNAME target of
  - CNAME target of LarryForAlaska
 </h2>
     <ul>
-    <li><a href="http://sites.larryforalaska.com/">    * http://sites.larryforalaska.com  </a></li>
-    <li><a href="http://z.larryforalaska.com/">    * http://z.larryforalaska.com  </a></li>
+    <li><a href="https://sites.larryforalaska.com/">    * https://sites.larryforalaska.com  </a></li>
+    <li><a href="https://z.larryforalaska.com/">    * https://z.larryforalaska.com  </a></li>
     <li><a href="https://lam3.LAM1.us/?lam">        * https://lam3.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
-    <li><a href="http://blinkenshell.larryforalaska.com/">        * http://blinkenshell.larryforalaska.com  </a>
+    <li><a href="https://blinkenshell.larryforalaska.com/">        * https://blinkenshell.larryforalaska.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
-    <li><a href="http://LarryForAlaska.com">
-                                            * http://LarryForAlaska.com</a>
+    <li><a href="https://LarryForAlaska.com">
+                                            * https://LarryForAlaska.com</a>
  - 2014 candidate for Alaska State House
     </li>
 </ul>
