Update LAM Alaska LAN servers

--- a/html/index.html
+++ b/html/index.html
@@ -142,12 +142,18 @@ This domain name points to my LAN at home in Alaska.  Port Forwarding on the rou
  - Default UnSecure site</li>
     <li><a href="https://gci.lam1.us/?lam"> * https://gci.lam1.us  </a>
  - My site by IP Address</li>
-    <li><a href="https://ak17.lam1.us/?lam"> * https://ak17.lam1.us  </a>
- - Old Secure site</li>
+</ul>
+The http and https traffic from the internet is directed by
+port forwarding to the ak20 server.  Other machines on the
+local area network can be accessed by machines on my Alaska LAN
+or via a ssh proxy using a machine on the LAN.
+<ul>
     <li><a href="https://ak19.lam1.us/?lam"> * https://ak19.lam1.us  </a>
  - Laptop computer on Local Area Network</li>
-    <li><a href="https://ak7.LAM1.us/">      * https://ak7.LAM1.us  </a>
- - Really Old server</li>
+    <li><a href="https://ak24.lam1.us/?lam"> * https://ak24.lam1.us  </a>
+ - AWS refreshed PC for bedroom HDMI</li>
+    <li><a href="https://ak23.lam1.us/?lam"> * https://ak23.lam1.us  </a>
+ - AWS refreshed PC for desk HDMI</li>
     </ul>
 
 <h2><span id="larryforalaska">
