Remove links to old domain
Mike gave up his domain in 2019 after over 10 years during which time it was
hosted on a series of servers at my house in North Pole, Alaska until the end
of 2017 when I moved most of the virtual hosts to an instance in my AWS virtual
private cloud.

The remaining link is now a secure link.
Add secure links to my top level domain names.

--- a/html/index.html
+++ b/html/index.html
@@ -39,13 +39,12 @@ This domain name points to the main server instance in my Virtual Private Cloud.
  - Clone of http://lam.blinkenshell.org</li>
 <br>
 <li>
-<a href="http://mike.lam1.us/About">        * http://mike.lam1.us  </a>
- - My brother's site on my server<br>aka: 
-<a href="http://muramg.info/About">         * http://muramg.info  </a>
- and
-<a href="http://www.muramg.info/About">     * http://www.muramg.info  </a>
+<a href="https://mike.lam1.us/About">       * https://mike.lam1.us  </a>
+ - My brother's site on my server<br>
  </li>
-<br>
+<li><a href="https://lam1.us">
+                                            * https://lam1.us  </a>
+ - My main Domain name</li>
     <li><a href="https://LAMurakami.com/?lam">
                                             * https://LAMurakami.com  </a>
  - Second Domain name</li>
@@ -154,6 +153,10 @@ or via a ssh proxy using a machine on the LAN.
  - AWS refreshed PC for bedroom HDMI</li>
     <li><a href="https://ak23.lam1.us/?lam"> * https://ak23.lam1.us  </a>
  - AWS refreshed PC for desk HDMI</li>
+<br>
+    <li><a href="https://larrymurakami.com">
+                                            * https://larrymurakami.com  </a>
+ - Another Domain name</li>
     </ul>
 
 <h2><span id="larryforalaska">
