Add sites for larrymurakami.com and larryforalaska.com

--- a/html/index.html
+++ b/html/index.html
@@ -25,12 +25,12 @@ This domain name points to the main server instance in my Virtual Private Cloud.
     <ul>
     <li><a href="https://sites.lamurakami.com/">    * https://sites.lamurakami.com  </a></li>
     <li><a href="https://z.lamurakami.com/">    * https://z.lamurakami.com  </a></li>
-    <li><a href="https://cabo.lamurakami.com/">     * https://cabo.lamurakami.com  </a>
- - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://aws.LAM1.us/?lam">        * https://aws.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="https://www.LAM1.us/">        * https://www.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.</li>
+    <li><a href="https://cabo.lamurakami.com/">     * https://cabo.lamurakami.com  </a>
+ - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://olnes.lamurakami.com/">    * https://olnes.lamurakami.com  </a>
  - Olnes West Subdivision, Alaska</li>
     <li><a href="https://arsc.lamurakami.com/">    * https://arsc.lamurakami.com  </a>
@@ -58,10 +58,10 @@ This domain name points to the main testing instance.  Upgrades and changes to t
 <ul>
     <li><a href="https://sites.LAM1.us/">    * https://sites.LAM1.us  </a>
  - This site which may link to my others</li>
-    <li><a href="https://lam1.LAM1.us/?lam">     * https://lam1.LAM1.us  </a>
- - Linux Apache MariaDB in the cloud.
     <li><a href="https://z.LAM1.us/">        * https://z.LAM1.us  </a>
  - A place to publish simple pages</li>
+    <li><a href="https://lam1.LAM1.us/?lam">     * https://lam1.LAM1.us  </a>
+ - Linux Apache MariaDB in the cloud.
     <li><a href="https://cabo.LAM1.us/">     * https://cabo.LAM1.us  </a>
  - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://olnes.LAM1.us/">    * https://olnes.LAM1.us  </a>
@@ -81,6 +81,12 @@ This domain name is a second for testing.  Alternate Operating Systems are teste
     <li><a href="https://z.larrymurakami.com/">    * https://z.larrymurakami.com  </a></li>
     <li><a href="https://lam2.LAM1.us/?lam">        * https://lam2.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
+    <li><a href="https://cabo.larrymurakami.com/">     * https://cabo.larrymurakami.com   </a>
+ - Cabo San Lucas, Baja California Sur, Mexico.</li>
+    <li><a href="https://olnes.larrymurakami.com/">    * https://olnes.larrymurakami.com   </a>
+ - Olnes West Subdivision, Alaska</li>
+    <li><a href="https://arsc.larrymurakami.com/">    * https://arsc.larrymurakami.com   </a>
+ - Arctic Region Supercomputing Center people page</li>
     <li><a href="https://blinkenshell.larrymurakami.com/">        * https://blinkenshell.larrymurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
 </ul>
@@ -169,6 +175,12 @@ This domain name is used for a second server instance in my Virtual Private Clou
     <li><a href="https://z.larryforalaska.com/">    * https://z.larryforalaska.com  </a></li>
     <li><a href="https://lam3.LAM1.us/?lam">        * https://lam3.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.
+    <li><a href="https://cabo.larryforalaska.com/">     * https://cabo.larryforalaska.com   </a>
+ - Cabo San Lucas, Baja California Sur, Mexico.</li>
+    <li><a href="https://olnes.larryforalaska.com/">    * https://olnes.larryforalaska.com   </a>
+ - Olnes West Subdivision, Alaska</li>
+    <li><a href="https://arsc.larryforalaska.com/">    * https://arsc.larryforalaska.com   </a>
+ - Arctic Region Supercomputing Center people page</li>
     <li><a href="https://blinkenshell.larryforalaska.com/">        * https://blinkenshell.larryforalaska.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
     <li><a href="https://LarryForAlaska.com">
