--- a/html/index.html
+++ b/html/index.html
@@ -73,21 +73,31 @@ This domain name points to the main testing instance.  Upgrades and changes to t
 </ul>
 <h2><span id="lam2">
 <a href="https://lam2.duckdns.org">lam2.duckdns.org</a></span>
+<a href="http://lam2.duckdns.org"> http: </a>
  - SSH SOCKS5 Proxy in the cloud.
 </h2>
 This domain name is a second for testing.  Alternate Operating Systems are tested using this domain name which is used in less CNAME DNS records.  Since 2024 when AWS started charging hourly for a public IPv4 address as much as a nano instance most of my test instances have only an IPv6 public address costing me half as much as a dual stack instance.
+<p>
+The <a href="/About/#lam2_Instance_to_be_a_SSH_SOCKS5_Proxy_server_on_port_443">lam2 Instance to be a SSH SOCKS5 Proxy server on port 443</a> cannot serve https: on the standard port becasue that is used as an alternate ssh port.  Port 443 is normally used for HTTPS so is likely to be available even when other ports are blocked.  I run this instance only when I find my ssh access blocked when using someone else's WiFi such as from the laptop at a hotel or for testing.
 <ul>
-    <li><a href="https://sites.larrymurakami.com/">    * https://sites.larrymurakami.com  </a></li>
-    <li><a href="https://z.larrymurakami.com/">    * https://z.larrymurakami.com  </a></li>
+    <li><a href="https://sites.larrymurakami.com/">    * https://sites.larrymurakami.com  </a>
+    <a href="http://sites.larrymurakami.com/"> http: </a></li>
+    <li><a href="https://z.larrymurakami.com/">    * https://z.larrymurakami.com  </a>
+    <a href="http://z.larrymurakami.com/"> http: </a></li>
     <li><a href="https://lam2.LAM1.us/?lam">        * https://lam2.LAM1.us  </a>
+    <a href="http://lam2.LAM1.us/?lam"> http: </a>
  - Linux Apache MariaDB in the cloud.
     <li><a href="https://cabo.larrymurakami.com/">     * https://cabo.larrymurakami.com   </a>
+    <a href="http://cabo.larrymurakami.com/"> http: </a>
  - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://olnes.larrymurakami.com/">    * https://olnes.larrymurakami.com   </a>
+    <a href="http://olnes.larrymurakami.com/"> http: </a>
  - Olnes West Subdivision, Alaska</li>
     <li><a href="https://arsc.larrymurakami.com/">    * https://arsc.larrymurakami.com   </a>
+    <a href="http://arsc.larrymurakami.com/"> http: </a>
  - Arctic Region Supercomputing Center people page</li>
     <li><a href="https://blinkenshell.larrymurakami.com/">        * https://blinkenshell.larrymurakami.com  </a>
+    <a href="http://blinkenshell.larrymurakami.com/"> http: </a>
  - Clone of http://lam.blinkenshell.org</li>
 </ul>
 
