Link to new CAPE Fairbanks website

--- a/html/index.html
+++ b/html/index.html
@@ -29,6 +29,8 @@ This domain name points to the main server instance in my Virtual Private Cloud.
  - Linux Apache MariaDB in the cloud.
     <li><a href="https://www.LAM1.us/">        * https://www.LAM1.us  </a>
  - Linux Apache MariaDB in the cloud.</li>
+    <li><a href="https://www.lamurakami.com/">        * https://www.lamurakami.com  </a>
+ - CAPE Fairbanks</li>
     <li><a href="https://cabo.lamurakami.com/">     * https://cabo.lamurakami.com  </a>
  - Cabo San Lucas, Baja California Sur, Mexico.</li>
     <li><a href="https://olnes.lamurakami.com/">    * https://olnes.lamurakami.com  </a>
@@ -37,6 +39,8 @@ This domain name points to the main server instance in my Virtual Private Cloud.
  - Arctic Region Supercomputing Center people page</li>
     <li><a href="https://blinkenshell.lamurakami.com/">        * https://blinkenshell.lamurakami.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
+    <li><a href="https://cape_fairbanks.lamurakami.com/">        * https://cape_fairbanks.lamurakami.com  </a>
+ - CAPE Fairbanks</li>
 <br>
 <li>
 <a href="https://mike.lam1.us/About">       * https://mike.lam1.us  </a>
@@ -70,6 +74,8 @@ This domain name points to the main testing instance.  Upgrades and changes to t
  - Arctic Region Supercomputing Center people page</li>
     <li><a href="https://blinkenshell.lam1.us/">        * https://blinkenshell.lam1.us  </a>
  - Clone of http://lam.blinkenshell.org</li>
+    <li><a href="https://cape_fairbanks.lam1.us/">        * https://cape_fairbanks.lam1.us  </a>
+ - CAPE Fairbanks</li>
 </ul>
 <h2><span id="lam2">
 <a href="https://lam2.duckdns.org">lam2.duckdns.org</a></span>
@@ -99,6 +105,8 @@ The <a href="/About/#lam2_Instance_to_be_a_SSH_SOCKS5_Proxy_server_on_port_443">
     <li><a href="https://blinkenshell.larrymurakami.com/">        * https://blinkenshell.larrymurakami.com  </a>
     <a href="http://blinkenshell.larrymurakami.com/"> http: </a>
  - Clone of http://lam.blinkenshell.org</li>
+    <li><a href="https://cape_fairbanks.larrymurakami.com/">        * https://cape_fairbanks.larrymurakami.com  </a>
+ - CAPE Fairbanks</li>
 </ul>
 
 <a name="AWS_S3">
@@ -193,6 +201,8 @@ This domain name is used for a second server instance in my Virtual Private Clou
  - Arctic Region Supercomputing Center people page</li>
     <li><a href="https://blinkenshell.larryforalaska.com/">        * https://blinkenshell.larryforalaska.com  </a>
  - Clone of http://lam.blinkenshell.org</li>
+    <li><a href="https://cape_fairbanks.larryforalaska.com/">        * https://cape_fairbanks.larryforalaska.com  </a>
+ - CAPE Fairbanks</li>
     <li><a href="https://LarryForAlaska.com">
                                             * https://LarryForAlaska.com</a>
  - 2014 candidate for Alaska State House
