Add non secure link to CAPE Fairbanks

--- a/html/index.html
+++ b/html/index.html
@@ -106,6 +106,7 @@ The <a href="/About/#lam2_Instance_to_be_a_SSH_SOCKS5_Proxy_server_on_port_443">
     <a href="http://blinkenshell.larrymurakami.com/"> http: </a>
  - Clone of http://lam.blinkenshell.org</li>
     <li><a href="https://cape_fairbanks.larrymurakami.com/">        * https://cape_fairbanks.larrymurakami.com  </a>
+    <a href="http://cape_fairbanks.larrymurakami.com/"> http: </a>
  - CAPE Fairbanks</li>
 </ul>
 
